# porcino

./: Cargo.toml
ThreatDragonModels/STRIDE/: STRIDE.json
porcino_app/: Cargo.toml
porcino_app/src/: app.rs  lib.rs  main.rs  runner.rs
porcino_core/: Cargo.toml
porcino_core/src/: bin.rs  data.rs  enums.rs  errors.rs  lib.rs  traits.rs
porcino_core/src/network/: activations.rs  layers.rs  mod.rs
porcino_data/: Cargo.toml
porcino_data/src/: lib.rs  parse.rs  persistence.rs
